--- a/post.hbs
+++ b/post.hbs
@@ -1,6 +1,14 @@
 {{!< default}}
 <div class="indexBox">
-  {{> "brief"}}
-  {{navigation}}
-  {{> "articleList"}}
+  <div class="fix">
+    <div class="menu">
+      <a href="#"><img src="{{asset "./image/menu.png"}}" title="showMenu"></a>
+      <div class="toggleMenu">
+        {{navigation}}
+      </div>
+    </div>
+    <a href="#"><img src="{{asset "./image/top.png"}}" title="toTop"></a>
+  </div>
+
+{{> "articleView"}}
 </div>
