--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,6 +1,10 @@
+
+/*initialize style*/
+
 * {
   padding: 0;
   margin: 0;
+  font-family: sans-serif;
 }
 
 body {
@@ -8,34 +12,44 @@ body {
   margin: auto;
 }
 
-a, a:hover, a:active, a:visited, li {
+a, a:hover, a:active, a:visited {
   color: inherit;
   text-decoration: none;
 }
 
-ul, li {
-  list-style: none;
-  font-size: 14px;
-}
-
-h1, h2, h3, h4, h5, h6, li {
+h1, h2, h3, h4, h5, h6 {
   margin: 1em 0;
   color: #357ca0;
   font-weight: bold;
 }
 
-p {
+p, li, time {
   font-size: 14px;
   line-height: 1.8em;
   color: #888888;
-  font-weight: lighter;
+  font-weight: normal;
 }
+
+li {
+  margin-left: 1em;
+}
+
+/*index page*/
 
 .indexBox {
   width: 800px;
   margin: 50px auto;
   border-top: solid 4px #357ca0;
   border-bottom: solid 4px #357ca0;
+}
+
+.navTitle, .navItem {
+  list-style: none;
+  font-size: 14px;
+  line-height: 1em;
+  margin: 1em 0;
+  color: #357ca0;
+  font-weight: bold;
 }
 
 .briefBox {
@@ -52,13 +66,12 @@ p {
 }
 
 .briefBox .blogTitle {
-  display: inline-block;
   margin: 30px 0;
 }
 
 .briefBox .blogDescription {
   margin: 0;
-  font-weight: lighter;
+  font-weight: normal;
 }
 
 .navBox {
@@ -69,7 +82,7 @@ p {
 }
 
 .navBox ul {
-  margin: 20px 50px 0 0;
+  margin: 0 50px 0 0;
   text-align: right;
 }
 
@@ -92,12 +105,16 @@ p {
   left: -20px;
   position: absolute;
   display: none;
+  vertical-align: bottom;
 }
 
 .listItem {
   margin: 20px 0;
-  position: relative;
   cursor: pointer;
+}
+
+.listItem .title h5 {
+  position: relative;
 }
 
 .listItem:hover .arrow {
@@ -125,5 +142,71 @@ p {
 }
 
 .older-posts {
+  float: right;
+}
+
+/*post page*/
+
+.postTitle {
+  margin: 50px 20px;
+  text-align: center;
+}
+
+.postBody {
+  margin: 50px 0;
+}
+
+.fix {
+  position: fixed;
+  right: 10%;
+  bottom: 10%;
+}
+
+.fix img {
+  height: 20px;
+  margin: 10px;
+}
+
+.menu {
+  position: relative;
+}
+
+.menu:hover .toggleMenu {
+  display: block;
+}
+
+.toggleMenu {
+  top: -300px;
+  left: -120px;
+  position: absolute;
+  display: none;
+}
+
+.otherPost {
+  height: 40px;
+}
+
+.otherPost h5 {
+  max-width: 300px;
+  white-space: nowrap;
+  display: inline-block;
+}
+
+.otherPost img {
+  height: 10px;
+  display: inline-block;
+}
+
+.prevPost {
+  max-width: 45%;
+  overflow-x: hidden;
+  display: inline-block;
+  float: left;
+}
+
+.nextPost {
+  max-width: 45%;
+  overflow-x: hidden;
+  display: inline-block;
   float: right;
 }
