--- a/partials/articleList.hbs
+++ b/partials/articleList.hbs
@@ -1,21 +1,23 @@
 <div class="listBox">
   {{#foreach posts}}
-    <article href="{{url}}" class="listItem {{post_class}}" onclick="loadBlog(this)">
-      <img src="{{asset "./image/arrow.png"}}" class="arrow">
-      <div class="title">
-        <h5>
-          <span>{{{title}}}</span>
-          <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-          <span>{{date format="YYYY-MM-DD"}}</span>
-        </h5>
-      </div>
-      <div class="preview">
-        <p>
-          {{excerpt characters="120"}}
-          <span>...</span>
-        </p>
-      </div>
-    </article>
+    <a href="{{url}}">
+      <article href="{{url}}" class="listItem">
+        <div class="title">
+          <h5>
+            <img src="{{asset "./image/arrowR.png"}}" class="arrow">
+            <span>{{{title}}}</span>
+            <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+            <span>{{date format="YYYY-MM-DD"}}</span>
+          </h5>
+        </div>
+        <div class="preview">
+          <p>
+            {{excerpt characters="120"}}
+            <span>...</span>
+          </p>
+        </div>
+      </article>
+    </a>
   {{/foreach}}
 </div>
 
