--- a/partials/brief.hbs
+++ b/partials/brief.hbs
@@ -1,4 +1,6 @@
 <div class="briefBox">
-  <h4 class="blogTitle">{{@blog.title}}</h4>
-  <h5 class="blogDescription">{{@blog.description}}</h5>
+  <a href="./author/toxni">
+    <h4 class="blogTitle">{{@blog.title}}</h4>
+    <h5 class="blogDescription">{{@blog.description}}</h5>
+  </a>
 </div>
