--- a/default.hbs
+++ b/default.hbs
@@ -8,11 +8,15 @@
   <link rel="apple-touch-icon" href="{{asset "./favicon.ico"}}"/>
   <link rel="stylesheet" type="text/css" href="{{asset "./css/default.css"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "./css/prism.css"}}">
+  <link rel="stylesheet" type="text/css" href="{{asset "./css/countDown.css"}}">
   {{ghost_head}}
 </head>
 <body class="{{body_class}}">
 {{{body}}}
+<script type="text/javascript" src="http://pv.sohu.com/cityjson"></script>
 <script type="text/javascript" src="{{asset "./js/prism.js"}}"></script>
+<script type="text/javascript" src="{{asset "./js/default.js"}}"></script>
+<script type="text/javascript" src="{{asset "./js/countDown.js"}}"></script>
 {{ghost_foot}}
 </body>
 </html>
