feat(): add canvas background

--- a/default.hbs
+++ b/default.hbs
@@ -13,6 +13,7 @@
 </head>
 <body class="{{body_class}}">
 {{{body}}}
+<canvas id="cas" class="cas"></canvas>
 <script type="text/javascript" src="http://pv.sohu.com/cityjson"></script>
 <script type="text/javascript" src="{{asset "./js/prism.js"}}"></script>
 <script type="text/javascript" src="{{asset "./js/default.js"}}"></script>
