--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -51,6 +51,7 @@ blockquote p {
   margin: 50px auto;
   border-top: solid 4px #357ca0;
   border-bottom: solid 4px #357ca0;
+  background: rgba(255, 255, 255, 0.6);
 }
 
 .navTitle, .navItem {
@@ -153,6 +154,14 @@ blockquote p {
 
 .older-posts {
   float: right;
+}
+
+.cas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.5;
 }
 
 /*post page*/
