--- a/partials/brief.hbs
+++ b/partials/brief.hbs
@@ -1,5 +1,5 @@
 <div class="briefBox">
-  <a href="./author/toxni">
+  <a href="{{@blog.url}}/author/toxni">
     <h4 class="blogTitle">{{@blog.title}}</h4>
     <h5 class="blogDescription">{{@blog.description}}</h5>
   </a>
