feat(): adapt different devices

--- a/author.hbs
+++ b/author.hbs
@@ -1,6 +1,7 @@
 {{!< default}}
-<div class="indexBox">
+<div class="indexBox" id="indexBox">
   {{> "brief"}}
+  {{> "sideNav"}}
 
   <!--userAgent-->
   <h4 id="userAgent" class="userAgent"></h4>
