--- a/default.hbs
+++ b/default.hbs
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>{{meta_title}}</title>
-  <meta name="description" content="{{meta_description}}"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <link rel="apple-touch-icon" href="{{asset "./favicon.ico"}}"/>
+  <meta name="description" content="{{meta_description}}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="apple-touch-icon" href="{{asset "./favicon.ico"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "./css/default.css"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "./css/prism.css"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "./css/countDown.css"}}">
