--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,6 +1,4 @@
-
 /*initialize style*/
-
 * {
   padding: 0;
   margin: 0;
@@ -10,6 +8,8 @@
 body {
   width: 960px;
   margin: auto;
+  min-width: 320px;
+  overflow-x: hidden;
 }
 
 a, a:hover, a:active, a:visited {
@@ -44,14 +44,40 @@ blockquote p {
   font-size: 16px;
 }
 
-/*index page*/
+code {
+  color: #f92672;
+}
 
+table {
+  width: 100%;
+}
+
+tr, th, td {
+  text-align: center;
+  margin: auto;
+  padding: inherit;
+}
+
+p>img, .mobile {
+  width: 600px;
+  max-width: 600px;
+  margin: 30px auto;
+  display: block;
+}
+
+.defaultColor {
+  color: #357ca0
+}
+
+/*index page*/
 .indexBox {
   width: 800px;
-  margin: 50px auto;
+  opacity: 0;
+  margin: 200px auto 50px auto;
   border-top: solid 4px #357ca0;
   border-bottom: solid 4px #357ca0;
   background: rgba(255, 255, 255, 0.6);
+  transition: all 0.5s ease 0s;
 }
 
 .navTitle, .navItem {
@@ -66,6 +92,7 @@ blockquote p {
 .briefBox {
   margin-bottom: 50px;
   text-align: center;
+  z-index: 1000;
 }
 
 .briefBox img {
@@ -90,11 +117,16 @@ blockquote p {
   margin: 50px 0;
   display: inline-block;
   vertical-align: top;
+
 }
 
 .navBox ul {
   margin: 0 50px 0 0;
   text-align: right;
+}
+
+.navBox li {
+  margin-left: 0;
 }
 
 .navTitle {
@@ -113,6 +145,7 @@ blockquote p {
 
 .listBox .arrow {
   height: 10px;
+  top: 2px;
   left: -20px;
   position: absolute;
   display: none;
@@ -172,18 +205,17 @@ blockquote p {
 }
 
 .postBody {
-  margin: 50px 0;
+  margin: 50px 20px;
 }
 
 .fix {
   position: fixed;
   right: 10%;
-  bottom: 10%;
+  bottom: 15%;
 }
 
 .fix img {
-  height: 20px;
-  margin: 10px;
+  height: 100px;
 }
 
 .menu {
@@ -196,7 +228,7 @@ blockquote p {
 
 .toggleMenu {
   top: -300px;
-  left: -120px;
+  left: -80px;
   position: absolute;
   display: none;
 }
@@ -250,4 +282,108 @@ blockquote p {
 
 .ip {
   text-align: center;
+}
+
+/*adaption for different devices*/
+@media (max-width: 1366px) {
+  .fix {
+    right: 5%;
+  }
+}
+
+@media (max-width: 1260px) {
+  .fix img {
+    height: 50px;
+  }
+
+  .menu:hover .toggleMenu {
+    display: none;
+  }
+
+  .author-template .fix img {
+    display: none;
+  }
+}
+
+@media (max-width: 640px) {
+  body {
+    width: 100%;
+  }
+
+  img, p>img, table, .mobile {
+    max-width: 100%;
+  }
+
+  pre {
+    padding-left: 1em;
+  }
+
+  .indexBox {
+    width: 100%;
+  }
+
+  .navBox {
+    width: 100%;
+    margin: auto;
+  }
+
+  .navBox ul {
+    margin: auto;
+    text-align: center;
+  }
+
+  .navBox li {
+    display: none;
+  }
+
+  .navBox .navTitle {
+    width: 50%;
+    padding: 5px;
+    margin: auto;
+    border: solid 1px #cccccc;
+    border-radius: 10px;
+    display: block;
+    color: #cccccc;
+  }
+
+  .listBox {
+    margin: 20px 0;
+    width: 100%;
+  }
+
+  .listItem {
+    padding: 0 20px;
+  }
+
+  .listItem .arrow {
+    display: none;
+  }
+
+  .otherPost {
+    height: 80px;
+  }
+
+  .prevPost {
+    max-width: 90%;
+    margin: 0 20px;
+    overflow-x: hidden;
+    display: block;
+    float: none;
+  }
+
+  .prevPost img {
+    display: none;
+  }
+
+  .nextPost {
+    max-width: 90%;
+    margin: 0 20px;
+    overflow-x: hidden;
+    display: block;
+    float: none;
+  }
+
+  .nextPost img {
+    display: none;
+  }
 }
