--- a/index.hbs
+++ b/index.hbs
@@ -1,5 +1,6 @@
 {{!< default}}
-<div class="indexBox">
+
+<div id="indexBox" class="indexBox">
   {{> "brief"}}
   {{navigation}}
   {{> "articleList"}}
