--- a/page.hbs
+++ b/page.hbs
@@ -1,5 +1,5 @@
 {{!< default}}
-<div class="indexBox">
+<div class="indexBox" id="indexBox">
   {{> "brief"}}
   {{navigation}}
   {{> "articleList"}}
