--- a/partials/articleView.hbs
+++ b/partials/articleView.hbs
@@ -10,6 +10,10 @@
         </section>
       </header>
 
+      <div class="mobileOnly">
+        {{navigation}}
+      </div>
+
       <section class="postBody">
         {{content}}
       </section>
