fix(): white screen on mobile

--- a/author.hbs
+++ b/author.hbs
@@ -3,6 +3,9 @@
   {{> "brief"}}
   {{> "sideNav"}}
 
+  <div class="mobileOnly">
+    {{navigation}}
+  </div>
   <!--userAgent-->
   <h4 id="userAgent" class="userAgent"></h4>
 
