--- a/author.hbs
+++ b/author.hbs
@@ -7,11 +7,17 @@
     {{navigation}}
   </div>
   <!--userAgent-->
-  <h4 id="userAgent" class="userAgent"></h4>
-
-  <!--ip address-->
-
-  <h4 id="ip" class="ip"></h4>
+  <div class="UABox">
+    <h4 class="userAgent">欢迎上车「</h4>
+    <h4 id="ip"  class="userAgent"></h4>
+    <h4 class="userAgent">」</h4>
+  </div>
+  <div class="UABox">
+    <img src="" id="OSImg" class="userAgent">
+    <h4 id="OSBox" class="userAgent"></h4>
+    <img src="" id="BSImg" class="userAgent">
+    <h4 id="BSBox" class="userAgent"></h4>
+  </div>
 
   <!--countDown-->
   <div class="countDown">
