--- a/author.hbs
+++ b/author.hbs
@@ -7,16 +7,33 @@
     {{navigation}}
   </div>
   <!--userAgent-->
-  <div class="UABox">
-    <h4 class="userAgent">欢迎上车「</h4>
-    <h4 id="ip"  class="userAgent"></h4>
-    <h4 class="userAgent">」</h4>
+  <div class="UA">
+    <div class="UABox">
+      <p class="userAgent">欢迎上车「</p>
+      <h4 id="ip"  class="userAgent"></h4>
+      <p class="userAgent">」</p>
+    </div>
+    <div class="UABox">
+      <p class="userAgent">我猜你在用「 </p>
+      <img src="" id="OSImg" class="userAgent">
+      <h4 id="OSBox" class="userAgent"></h4>
+      <p class="userAgent">&nbsp;-&nbsp;</p>
+      <img src="" id="BSImg" class="userAgent">
+      <h4 id="BSBox" class="userAgent"></h4>
+      <p class="userAgent">」</p>
+    </div>
   </div>
-  <div class="UABox">
-    <img src="" id="OSImg" class="userAgent">
-    <h4 id="OSBox" class="userAgent"></h4>
-    <img src="" id="BSImg" class="userAgent">
-    <h4 id="BSBox" class="userAgent"></h4>
+
+  <!--personal info-->
+  <div class="PI">
+    <blockquote>个人简介</blockquote>
+    <div id="PIBox" class="PIBox"></div>
+  </div>
+
+  <!--books-->
+  <div class="PI">
+    <blockquote>我的书单</blockquote>
+    <div id="bookBox" class="bookBox"></div>
   </div>
 
   <!--countDown-->
