--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -12,8 +12,12 @@ body {
   overflow-x: hidden;
 }
 
-a, a:hover, a:active, a:visited {
+a {
   color: #669900;
+}
+
+a, a:hover, a:active, a:visited {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -149,7 +153,7 @@ p>img, .mobile {
   color: #888888;
 }
 
-.navItem {
+.navItem a {
   color: #357ca0;
 }
 
