--- a/author.hbs
+++ b/author.hbs
@@ -33,7 +33,13 @@
   <!--books-->
   <div class="PI">
     <blockquote>我的书单</blockquote>
-    <div id="bookBox" class="bookBox"></div>
+    <div id="bookBox" class="personalBox bookBox"></div>
+  </div>
+
+  <!--games-->
+  <div class="PI">
+    <blockquote>我的游戏收藏夹</blockquote>
+    <div id="gameBox" class="personalBox gameBox"></div>
   </div>
 
   <!--countDown-->
