--- a/author.hbs
+++ b/author.hbs
@@ -24,26 +24,33 @@
     </div>
   </div>
 
-  <!--personal info-->
-  <div class="PI">
-    <blockquote>个人简介</blockquote>
-    <div id="PIBox" class="PIBox"></div>
-  </div>
+  <div class="PIFather">
+    <!--personal info-->
+    <div class="PI">
+      <blockquote>个人简介</blockquote>
+      <div id="PIBox" class="PIBox"></div>
+    </div>
 
-  <!--books-->
-  <div class="PI">
-    <blockquote>我的书单</blockquote>
-    <div id="bookBox" class="personalBox bookBox"></div>
-  </div>
+    <!--books-->
+    <div class="PI">
+      <blockquote>我的书单</blockquote>
+      <div id="bookBox" class="personalBox bookBox"></div>
+    </div>
 
-  <!--games-->
-  <div class="PI">
-    <blockquote>我的游戏收藏夹</blockquote>
-    <div id="gameBox" class="personalBox gameBox"></div>
+    <!--games-->
+    <div class="PI">
+      <blockquote>我的游戏收藏夹</blockquote>
+      <div id="gameBox" class="personalBox gameBox"></div>
+    </div>
   </div>
 
   <!--countDown-->
   <div class="countDown">
+    <h3>
+      Time with
+      <a href="http://linien.top" target="_blank">Linien</a>
+      is running...
+    </h3>
     <div class="countBlock">
       <p class="day">0</p>
       <p class="unit">Days</p>
