--- a/partials/sideNav.hbs
+++ b/partials/sideNav.hbs
@@ -1,6 +1,6 @@
 <div class="fix">
   <div class="menu">
-    <a><img src="{{asset "./image/box.gif"}}" title="toTop"  id="toTop"></a>
+    <img src="{{asset "./image/box.gif"}}" title="toTop"  id="toTop">
     <div class="toggleMenu">
       {{navigation}}
     </div>
