--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -245,7 +245,7 @@ p>img, .mobile {
 
 .fix {
   position: fixed;
-  right: 10%;
+  right: 5%;
   bottom: 10%;
 }
 
@@ -399,7 +399,7 @@ p>img, .mobile {
 /*adaption for different devices*/
 @media (max-width: 1366px) {
   .fix {
-    right: 5%;
+    right: 0;
   }
 }
 
@@ -407,7 +407,7 @@ p>img, .mobile {
   .fix img {
     width: 50px;
     height: 50px;
-    padding: 0;
+    padding: 25px;
   }
 
   .menu:hover .toggleMenu {
