feat(): initial counter in author page

--- a/author.hbs
+++ b/author.hbs
@@ -46,11 +46,7 @@
 
   <!--countDown-->
   <div class="countDown">
-    <h3>
-      Time with
-      <a href="http://linien.top" target="_blank">Linien</a>
-      is running...
-    </h3>
+    <h3 id="countName"></h3>
     <div class="countBlock">
       <p class="day">0</p>
       <p class="unit">Days</p>
