--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -66,7 +66,7 @@ pre[class*="language-"] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-	color: #f92672;
+	color: #990055;
 }
 
 .token.boolean,
@@ -96,7 +96,7 @@ pre[class*="language-"] {
 .token.atrule,
 .token.attr-value,
 .token.function {
-	color: #ee9900;
+	color: #0077aa;
 }
 
 .token.keyword {
