--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -32,6 +32,7 @@ pre[class*="language-"] {
 	padding: 1em 1em 1em 3em;
 	border-left: solid 3px #357ca0;
 	margin: 1em 0;
+	font-size: 0.85em;
 	overflow: auto;
 }
 
