--- a/default.hbs
+++ b/default.hbs
@@ -5,6 +5,9 @@
   <title>{{meta_title}}</title>
   <meta name="description" content="{{meta_description}}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="author" content="toxni">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <link rel="apple-touch-icon" href="{{asset "./favicon.ico"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "./css/default.css"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "./css/prism.css"}}">
