--- a/author.hbs
+++ b/author.hbs
@@ -67,8 +67,8 @@
 
   {{#author}}
     <div class="portrait">
-      {{#if @blog.logo}}
-        <a href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>
+      {{#if @site.logo}}
+        <a href="{{@site.url}}"><img src="{{@site.logo}}" alt="{{@site.title}}" /></a>
       {{/if}}
     </div>
   {{/author}}
