--- a/partials/brief.hbs
+++ b/partials/brief.hbs
@@ -1,6 +1,6 @@
 <div class="briefBox">
-  <a href="{{@blog.url}}/author/toxni">
-    <h4 class="blogTitle">{{@blog.title}}</h4>
-    <h5 class="blogDescription">{{@blog.description}}</h5>
+  <a href="{{@site.url}}/author/toxni">
+    <h4 class="blogTitle">{{@site.title}}</h4>
+    <h5 class="blogDescription">{{@site.description}}</h5>
   </a>
 </div>
