--- a/author.hbs
+++ b/author.hbs
@@ -9,9 +9,7 @@
   <!--userAgent-->
   <div class="UA">
     <div class="UABox">
-      <p class="userAgent">欢迎上车「</p>
-      <h4 id="ip"  class="userAgent"></h4>
-      <p class="userAgent">」</p>
+      <p class="userAgent">欢迎上车</p>
     </div>
     <div class="UABox">
       <p class="userAgent">我猜你在用「 </p>
